--- a/pagina1/index.html
+++ b/pagina1/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="author" content="Fábio César" />
         <meta name="description" content="Essa página contém uma listagem das minhas franquias de jogos prediletas" />
-        <link rel="icon" href="icon.ico" type="image/x-icon">
+        <link rel="icon" href="../icon.ico" type="image/x-icon" />
         <title>Jogos Favoritos</title>
     </head>
     <body>
