chore: add a comment to index.html for page2

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -107,5 +107,6 @@
         <footer>
             <p>A final Nino message: <blockquote style="background-color:black;color:white;">I'll do my best!</blockquote></p>
         </footer>
+        <!- comentário ->
     </body>
 </html>
